--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "react-type-animation": "^3.1.0",
     "sharp": "^0.32.4",
     "splide-nextjs": "^2.4.23",
+    "swiper": "^11.1.15",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
   },
